Changelog
=========

9.7-dev - (unreleased)
----------------------
* Change: updated portal navigation style based on the new design of soer2015
  [ichimdav refs #19536]
* Change: removed styles that were applied on selectors that are too agressive
  within eea-base.css, ploneCustom.css or eea-public.css.
  This way other styles can apply new styles instead of having to do overrides.
  See ticket for the exact changesets
  [ichimdav refs #19536]
* Change: last-child class is now applied through javascript to all eea-tabs not
  just those from the whatsnewgallery
  [ichimdav refs #19536]

9.6 - (2014-05-19)
------------------
* Change: EEA Tabs no longer detaches the tabs when performing it's tabs logic
  [ichimdav refs #19536]
* Feature: EEA Tabs will now load panel content with ajax requests if eea-tabs-ajax
  class is present
  [ichimdav refs #19536]
* Fix: make sure item is locked on edit page load
  [batradav refs #19405]

9.5 - (2014-05-13)
------------------
* Change: hiddenStructure class now has an important declaration set to the
  display property in order to avoid being overriden by specificity
  [ichimdav refs #19369]
* Feature: folder_accordion_view now checks for a 'hideOtherResultsFromAccordionView'
  property which is present and is True will hide the other results section
  [ichimdav refs #19335]
* Change: relatedItems no longer has float issues if javascript is disabled or
  the tabs logic isn't executed because of a javascript error
  [ichimdav refs #19315]
* Feature: SEO, link EEA content with G+ publisher markup.
* Feature: Accordion default open panels by adding CSS class 'current'. Also
  support multiple open-by-default panels for non-exclusive accordions
  [voineali refs #19056]
* Feature: Added robots meta tag in <head> to disallow search
  engines to index "public draft" states (visible only with direct link).
  [demarant fixes #19091]
* Bug fix: Allow titles within PDF cover export longer than 65 chars (one line)
  [voineali refs #18953]